--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,23 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.content {
+  margin-top: 20px;
+  position: fixed;
+  width: 100%;
+
 }
